<resources>
    <string name="appName">Dziwna aplikacja</string>
    <string name="showDogSwitch">Display this cute dog</string>
    <string name="button">Button</string>
    <string name="rateText">Rate him!</string>
    <string name="reviewEditTextPrompt">Write here some nice words!</string>
    <string name="sendButton">Send your review (well, not actually)</string>
    <string name="dogContentDescription">Look at him, oooooh.</string>
    <string name="goRateDog">Rate some dogs</string>
    <string name="resetDogs">Reset the database</string>
    <string name="messageSent">Your review has not been sent!</string>
    <string name="goTimers">Place timers</string>
    <string name="mainTitleText">SWiM-1</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="addNewTimerText">Add new timer</string>
    <string name="exit">Exit</string>
    <string name="timerEditText">New timer</string>
    <string name="goWhereYouSelected">Go there!</string>
    <string name="timerListLabelText">Timers (max 4)</string>
    <string name="runTimers">Run timers</string>
    <string name="nextTimer">Run next timer</string>
    <string name="noTimers">No timers has been set!</string>
    <string name="noMoreTimers">There are no more timers!</string>

    <string name="woof">Woof!</string>

    <string name="dogDoesFetch">The dog fetched your stick!</string>
    <string name="dogCannotFetch">This dog cannot fetch any sticks!</string>

    <string name="fetchTestMenuItem">Fetch</string>
    <string name="petDogMenuItem">Pet him</string>
    <string name="reportDogMenuItem">Report this dog</string>

    <string name="reportDogEditTextHint">Additional information</string>
    <string name="reportDogDialogTitle">Report this dog</string>
    <string name="reportDogConfirmation">Report him!</string>
    <string name="reportDogToast">This dog has been reported!</string>

    <string-array name="reportDogTypes">
        <item>Too cute</item>
        <item>Not a dog</item>
        <item>Too smoll</item>
        <item>Cannot fetch</item>
    </string-array>

    <string name="addDogTitle">Add dog</string>
    <string name="dogNameHint">Name</string>
    <string name="dogDescriptionHint">Description</string>
    <string name="fetchSwitchText">Able to fetch</string>
    <string name="addDogButtonText">Add him to the database</string>

    <string name="externalSave">Save to external memory</string>
    <string name="internalSave">Save to internal memory</string>

    <string name="title_activity_run_timer">RunTimerActivity</string>
    <string name="action_settings">Settings</string>

</resources>
