<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddDogActivity" android:orientation="vertical">

    <TextView
            android:text="@string/addDogTitle"
            android:layout_width="wrap_content"
            android:theme="@style/AppTheme.Title"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_gravity="center"
    />
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="169dp" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/dogPhoto" android:layout_weight="0.4"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditText" android:hint="@string/dogNameHint"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/descriptionEditText" android:layout_weight="0.2" android:hint="@string/dogDescriptionHint"/>
    <Switch
            android:text="@string/fetchSwitchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/fetchSwitch" android:layout_weight="0.03"/>
    <Button
            android:text="@string/addDogButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/addToDatabaseButton" android:layout_weight="0.05"/>
    <Button
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/backButton" android:layout_weight="0.05"/>
</LinearLayout>