<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTitleText"
            android:textAppearance="@style/AppTheme.Title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/mainTitle" android:layout_marginTop="92dp" app:layout_constraintHorizontal_bias="0.516"/>
    <Button
            android:text="@string/goWhereYouSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/goThere"
            android:onClick="onGoThereClick"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <RadioGroup
            android:layout_width="146dp"
            android:layout_height="117dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainTitle" android:id="@+id/radioGroup"
            android:layout_marginTop="50dp" android:checkedButton="@id/placeTimersRadioButton">
        <RadioButton
                android:text="@string/goTimers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placeTimersRadioButton"/>
        <RadioButton
                android:text="@string/goRateDog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rateSomeDogsRadioButton"/>
        <RadioButton
                android:text="@string/resetDogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/resetDogsRadioButton"/>
        <RadioButton
                android:text="@string/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/exitRadioButton"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>