<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TakePhotoActivity" android:orientation="vertical">

    <TextureView
            android:layout_width="match_parent"
            android:id="@+id/cameraView" android:layout_weight="0.9" android:layout_height="0dp"/>
    <Button
            android:text="@string/internalSave"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/internalSaveButton" android:layout_weight="0.1"/>
    <Button
            android:text="@string/externalSave"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/externalSaveButton" android:layout_weight="0.1"/>
    <Button
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/backButton" android:layout_weight="0.1"/>
</LinearLayout>