<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TimersActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="218dp" android:layout_alignParentStart="true"
            android:id="@+id/timerList"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_above="@+id/timerRel" android:layout_marginBottom="0dp">
    </androidx.recyclerview.widget.RecyclerView>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="353dp" android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="2dp" android:layout_marginStart="0dp"
            android:id="@+id/timerRel">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:text="@string/timerEditText"
                android:layout_marginBottom="40dp"
                android:layout_alignParentStart="true" android:layout_marginStart="101dp"
                android:layout_marginTop="32dp" android:layout_below="@+id/timerListLabel"/>
        <Button
                android:text="@string/addNewTimerText"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="110dp" android:id="@+id/addNewTimer"
                android:onClick="onAddNewTimer" android:layout_marginStart="127dp"
                android:layout_marginEnd="125dp"
                android:layout_alignParentBottom="true" android:layout_marginTop="21dp"
                android:layout_below="@+id/editText"/>
        <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp" android:layout_marginBottom="32dp"
                android:onClick="onBackButtonClick"
                android:id="@+id/backButton" android:layout_alignParentBottom="true"/>
        <TextView
                android:text="@string/timerListLabelText"
                android:layout_width="wrap_content"
                android:layout_height="39dp" android:layout_centerHorizontal="true"
                android:id="@+id/timerListLabel" android:layout_marginTop="10dp" android:layout_alignParentTop="true"/>
    </RelativeLayout>
</RelativeLayout>